# Datatype

./: .gitignore  README.md  development.txt  pyproject.toml  requirements.txt
old_pyi/: get_datatype.pyi
src/Datatype/: __init__.py
src/Datatype.egg-info/: PKG-INFO  SOURCES.txt
src/bloblo.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_Datatype.py
